# ad-tensors-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
docs/: _quarto.yml  api_index.md  index.md
docs/design/: api.md  architecture.md  index.md  type-system.md
docs/plans/: 2026-03-03-tenferro-linalg-builder-design.md  2026-03-03-tenferro-linalg-builder-implementation.md
scripts/: build_docs_site.sh
src/: ad_value.rs  api.rs  context.rs  dyn_types.rs  error.rs  lib.rs  mode.rs  policy.rs  runtime.rs  scalar.rs  traits.rs
src/ad_value/: mod.rs  mode.rs  scalar.rs  tensor.rs  value.rs
src/api/: ad_results.rs  einsum.rs  linalg_ad_decomp.rs  linalg_ad_matrix.rs  linalg_primal_decomp.rs  linalg_primal_matrix.rs  mod.rs
src/dyn_types/: dyn_ad_tensor.rs  dyn_ad_value.rs  mod.rs  scalar.rs  tensor.rs
